# Studio

./: .env.example  .env.prod.example  .gitignore  .gitmodules  AGENTS.md  AGENT_REFACTORING_SUMMARY.md  CLAUDE.md  CLEAN_AGENT_SYSTEM_SUMMARY.md  CONTRIBUTING.md  DEPLOYMENT.md  EDIT_MODE_IMPLEMENTATION.md  FRONTEND_BILLING_INTEGRATION.md  NOTICE  QUICK-START.md  README.md  TESTING.md  THIRD-PARTY-NOTICES.md  VOLUME_ARCHITECTURE.md  WHATIWASDOING.md  cleanup_all.py  dependency_analysis.json  deploy_backend.sh  design_rules.md  docker-compose.cloudflare-tunnel.yml  docker-compose.prod.yml  docker-compose.yml  landing copy.html  lint-staged.config.js  main.py  manage-prod.sh  manual_cleanup.py  migrate_agents_simple.py  package-lock.json  package.json  pnpm-lock.yaml
ai-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
ai-service/app/: config.py  main.py  schemas.py
ai-service/app/routers/: chat.py  code_generation.py  templates.py
ai-service/app/services/: ai_provider.py  template_service.py
desktop/src-tauri/: .gitignore  CLAUDE.md  Cargo.toml  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: bootstrap.rs  commands.rs  deep_link.rs  main.rs  sidecar.rs  tokens.rs  tray.rs  updater.rs  window.rs
orchestrator/: .dockerignore  .env.example  Dockerfile  Dockerfile.devserver  README.md  create_superuser.py  make_admin.py  migrate_agents.py  migrations_add_bases.py  namespace_reaper.py  pyproject.toml  seed_agents.py  seed_bases.py  update_agent_mode.py  update_routers.py
orchestrator/alembic/: env.py
orchestrator/alembic/versions/: 0001_initial_schema.py  0002_add_theme_preset.py  0003_add_themes_table.py  0004_add_user_providers_table.py  0005_billing_credits_system.py  0007_add_base_user_submissions.py  0008_add_two_factor_auth.py  0009_add_template_archive_fields.py  0010_default_visibility_private.py  0011_expand_avatar_url_to_text.py  0012_add_project_asset_directories.py  0015_themes_marketplace.py  0018_add_deployment_provider.py  0019_add_deployment_targets.py  0020_admin_panel_schema.py  0021_agent_steps_chat_sessions_ext_keys.py  0021_agent_steps_sessions.py  0023_add_container_startup_command.py  0024_add_skills_system.py  0025_add_channel_and_mcp_system.py  0026_add_agent_mcp_assignments.py  0027_add_git_repo_url_to_marketplace_agents.py  0028_fix_missing_ondelete_fk_clauses.py  0029_add_template_build_system.py  0030_add_v2_project_fields.py  0031_volume_hub_architecture.py  0032_add_exports_and_deployment_env.py  0032_rbac_teams.py  0033_add_container_build_fields.py  0034_add_refresh_tokens_table.py  0034_rbac_teams.py  0035_add_team_id_to_marketplace_transactions.py  0035_rbac_teams.py  0036_add_team_id_to_marketplace_models.py  0036_add_team_id_to_marketplace_transactions.py  0037_add_kanban_point_value.py  0037_add_team_id_to_marketplace_models.py  0038_add_kanban_point_value.py  0038_add_kanban_task_ref_number.py  0039_add_kanban_task_ref_number.py  (+114 more)
orchestrator/app/: auth.py  auth_external.py  auth_unified.py  base_container_manager.py  compliance.py  config.py  config_features.py  database.py  deprecated_k8s_client.py  deprecated_k8s_container_manager.py  dev_server_manager.py  docker_container_manager.py  gateway.py  k8s_client.py  k8s_client_helpers.py  k8s_container_manager.py  main.py  models.py  models_auth.py  models_automations.py  models_inbox.py  models_kanban.py  models_team.py  models_workflows.py  models_workspace_data.py  oauth.py  permissions.py  referral_db.py  schemas.py  schemas_auth.py  schemas_automations.py  schemas_feedback.py  schemas_team.py  schemas_theme.py  schemas_workspace_data.py  seed_data.py  users.py  worker.py
orchestrator/app/agent/: __init__.py  agent.py  agents_config.json  apply_patch.py  base.py  compaction.py  factory.py  features.py  iterative_agent.py  models.py  parser.py  plan_manager.py  prompt_caching.py  prompts.py  react_agent.py  resource_limits.py  stream_agent.py  subagent_manager.py  tesslate_agent.py  tool_converter.py  trajectory.py  trajectory_writer.py
orchestrator/ast_worker/: package-lock.json  package.json  worker.mjs
orchestrator/feature_flags/: beta.yaml  defaults.yaml  desktop.yaml  docker.yaml  minikube.yaml  production.yaml
orchestrator/regional_router/: Dockerfile  main.py
orchestrator/scripts/: __init__.py  _seed_helpers.py  _seed_publish_federated.py  create_tables_uuid.py  fix_devserver_source_strategy.py  fix_user_keys.py  seed_apps.py  seed_contract_templates.py  seed_crm_app.py  seed_crm_with_postgres_app.py  seed_damian_app.py  seed_deer_flow_app.py  seed_geopin_app.py  seed_hello_node_app.py  seed_hello_world_app.py  seed_law_onboarding_app.py  seed_markitdown_app.py  seed_mirofish_app.py  seed_nightly_digest.py  seed_test_surfaces_apps.py
orchestrator/template/: TESSLATE.md  index.html  package-lock.json  package.json  vite.config.js
orchestrator/tests/: README.md  conftest.py  test_agent_api.py  test_chat_auto_title.py  test_compliance.py  test_comprehensive_agent_modes.py  test_config_parser.py  test_config_sync.py  test_deployment_registration.py  test_deployment_seed.py  test_env_override_exports.py  test_export_resolver.py  test_internal_api.py  test_namespace_reaper.py  test_patch_file_tool.py  test_project_auto_add_base.py  test_pty_broker.py  test_public_marketplace.py  test_public_models.py  test_resource_limits.py  test_retry_logic.py  test_shell_api.py  test_universal_agent.py  test_websocket_agent.py  test_worker_automation_task.py
(+2489 files in other folders)
