[project]
name = "tesslate-studio-orchestrator"
version = "0.1.0"
description = "Tesslate Studio - Open source full stack software builder - Backend Orchestrator"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Tesslate"}
]
keywords = ["orchestrator", "automation", "full-stack", "builder"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "jinja2>=3.1.3",
    "asyncpg>=0.29.0",
    "email-validator>=2.2.0",
    "aiohttp>=3.9.0",
    "kubernetes>=28.1.0",
    "docker>=7.0.0",
    "nanoid>=2.0.0",
    "cryptography>=42.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
