[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
exclude = ["users*", "k8s*", "template*"]

[project]
name = "tesslate-studio-orchestrator"
version = "0.1.0"
description = "Tesslate Studio - Open source full stack software builder - Backend Orchestrator"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "aiofiles>=23.2.1",
    "websockets>=12.0",
    "openai>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.1.0",
    "httpx>=0.26.0",
    "jinja2>=3.1.3",
    "asyncpg>=0.29.0",
    "email-validator>=2.2.0",
    "aiohttp>=3.9.0",
    "kubernetes>=28.1.0",
    "docker>=7.0.0",
    "nanoid>=2.0.0",
    # Authentication
    "fastapi-users[sqlalchemy]>=13.0.0",
    "httpx-oauth>=0.14.1",
    "itsdangerous>=2.1.2",
    # Rate limiting
    "slowapi>=0.1.9",
    # Encryption
    "cryptography>=41.0.0",
    # Payment processing
    "stripe>=7.0.0",
    "tenacity>=9.1.2",
    # AWS S3 for project storage
    "boto3>=1.34.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.21.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]
